--- a/notebooks/data_processing/1_database_similarity.ipynb
+++ b/notebooks/data_processing/1_database_similarity.ipynb
@@ -168,6 +168,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Generate supplementary figure for the paper"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
