--- a/notebooks/data_processing/1_metlin.ipynb
+++ b/notebooks/data_processing/1_metlin.ipynb
@@ -21,6 +21,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 1:\n",
+    "Download the METLINCCS dataset\n",
+    "\n",
+    "Link: https://metlin.scripps.edu/landing_page.php?pgcontent=mainPage\n",
+    "\n",
+    "Click on METLIN-CCS | METLIN CCS Lipids and download the excel, export it as csv and load it here."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -339,6 +351,13 @@
    ],
    "source": [
     "df.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Export dataset ready to be used in the next notebook."
    ]
   },
   {
