updated file paths

--- a/notebooks/reproduce_figures/supplementary_figure_11.ipynb
+++ b/notebooks/reproduce_figures/supplementary_figure_11.ipynb
@@ -78,12 +78,12 @@
    "outputs": [],
    "source": [
     "ccsbase_full = pd.read_parquet(\n",
-    "    \"/Users/chloeengler/Documents/Tools/ccs-prediction/data (1)/ccs-prediction/ccsbase_3d.parquet\",\n",
+    "    \"/ccs-prediction/ccsbase_3d.parquet\",\n",
     ")\n",
     "\n",
     "\n",
     "metlin_full = pd.read_parquet(\n",
-    "    \"/Users/chloeengler/Documents/Tools/ccs-prediction/data (1)/ccs-prediction/metlin_3d.parquet\",\n",
+    "    \"/ccs-prediction/metlin_3d.parquet\",\n",
     ")"
    ]
   },
@@ -93,12 +93,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "metlin_test = pd.read_parquet(\n",
-    "    \"/Users/chloeengler/Documents/Tools/ccs-prediction/data (1)/ccs-prediction/metlin_test_3d.parquet\"\n",
-    ")\n",
-    "ccsbase_test = pd.read_parquet(\n",
-    "    \"/Users/chloeengler/Documents/Tools/ccs-prediction/data (1)/ccs-prediction/ccsbase_test_3d.parquet\"\n",
-    ")\n",
+    "metlin_test = pd.read_parquet(\"/ccs-prediction/metlin_test_3d.parquet\")\n",
+    "ccsbase_test = pd.read_parquet(\"/ccs-prediction/ccsbase_test_3d.parquet\")\n",
     "\n",
     "original_test_sets = {\n",
     "    \"ccsbase\": ccsbase_test,\n",
@@ -142,8 +138,8 @@
     "            \"metlin test\",\n",
     "        ],\n",
     "        [\n",
-    "            \"/Users/chloeengler/Documents/Tools/ccs-prediction/data (1)/ccs-prediction-outputs/final-experiments-paper/mol2ccs/ccsbase_test_3d_pred.parquet\",  # 0.05% error is necessary because the model is pretty good\n",
-    "            \"/Users/chloeengler/Documents/Tools/ccs-prediction/data (1)/ccs-prediction-outputs/final-experiments-paper/mol2ccs/metlin_test_3d_pred.parquet\",\n",
+    "            \"/ccs-prediction-outputs/final-experiments-paper/mol2ccs/ccsbase_test_3d_pred.parquet\",  # 0.05% error is necessary because the model is pretty good\n",
+    "            \"/ccs-prediction-outputs/final-experiments-paper/mol2ccs/metlin_test_3d_pred.parquet\",\n",
     "        ],\n",
     "    )\n",
     ")\n",
@@ -156,8 +152,8 @@
     "        \"metlin predictions from ccsbase\",\n",
     "    ],\n",
     "    [\n",
-    "        \"/Users/chloeengler/Documents/Tools/ccs-prediction/data (1)/ccs-prediction-outputs/final-experiments-paper/mol2ccs/ccsbase_3d_pred.parquet\",  # 5% error -> good\n",
-    "        \"/Users/chloeengler/Documents/Tools/ccs-prediction/data (1)/ccs-prediction-outputs/final-experiments-paper/mol2ccs/metlin_3d_pred.parquet\",  # 5% error -> good\n",
+    "        \"/ccs-prediction-outputs/final-experiments-paper/mol2ccs/ccsbase_3d_pred.parquet\",  # 5% error -> good\n",
+    "        \"/ccs-prediction-outputs/final-experiments-paper/mol2ccs/metlin_3d_pred.parquet\",  # 5% error -> good\n",
     "    ],\n",
     "):\n",
     "    preds = pd.read_parquet(path)\n",
