--- a/notebooks/reproduce_figures/supplementary_figure_11.ipynb
+++ b/notebooks/reproduce_figures/supplementary_figure_11.ipynb
@@ -285,7 +285,7 @@
     "        )\n",
     "\n",
     "        # fit model\n",
-    "        feature_df = model.fit(\n",
+    "        model.fit(\n",
     "            train,\n",
     "            hpo_params={\n",
     "                \"n_estimators\": [50, 100, 200, 400],\n",
